force-app/main/default/objects/Scheme_Reviewer__c/Scheme_Reviewer__c.object-meta.xml
<CustomObject>
    <label>Scheme Reviewer</label>
    <nameField>
        <displayFormat>SCR-{00000}</displayFormat>
        <label>Scheme Reviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheme Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>