force-app/main/default/objects/Scheme_Reviewer__c/fields/Alternate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_Number__c</fullName>
    <label>Alternate Phone Number</label>
    <type>Phone</type>
</CustomField>