force-app/main/default/objects/Scheme_Reviewer__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipLabel>Scheme Reviewers</relationshipLabel>
    <relationshipName>Scheme_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>