force-app/main/default/objects/Scheme_Reviewer__c/fields/Reviewer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Email_Address__c</fullName>
    <formula>Reviewer__r.Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewer Email Address</label>
    <type>Text</type>
</CustomField>