force-app/main/default/objects/Scheme_Reviewer__c/fields/Reviewer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Full_Name__c</fullName>
    <formula>TRIM(
  IF(ISBLANK(TEXT(Reviewer__r.Title__c)), &quot;&quot;, TEXT(Reviewer__r.Title__c) &amp; &quot; &quot;) &amp;
  IF(ISBLANK(Reviewer__r.First_Name__c), &quot;&quot;, Reviewer__r.First_Name__c &amp; &quot; &quot;) &amp;
  Reviewer__r.Last_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewer Full Name</label>
    <type>Text</type>
</CustomField>