force-app/main/default/objects/Scheme_Reviewer__c/fields/Reviewer_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Is_Active__c</fullName>
    <formula>Reviewer__r.Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewer Is Active</label>
    <type>Checkbox</type>
</CustomField>