force-app/main/default/objects/Scheme_Reviewer__c/fields/Reviewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Type__c</fullName>
    <label>Reviewer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ex-Grantee</fullName>
            </value>
            <value>
                <fullName>Peer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>