force-app/main/default/objects/Scheme_Reviewer__c/fields/Type_of_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Reviewer__c</fullName>
    <formula>TEXT(Reviewer__r.Reviewer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Reviewer</label>
    <type>Text</type>
</CustomField>