force-app/main/default/objects/Scheme_Reviewer__c/fields/Yearly_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Schemes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Schemes</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Scheme Reviewers</relationshipLabel>
    <relationshipName>Scheme_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>